--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>com.gooddata</groupId>
         <artifactId>uberpom</artifactId>
         <version>2.6.6-SNAPSHOT</version>
-        <relativePath></relativePath>
+        <relativePath />
     </parent>
 
   <groupId>net.sitina.test</groupId>
   <artifactId>release-test</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>release-test</name>
@@ -35,7 +34,8 @@
         <connection>scm:git:git@github.com:gooddata/gdc-backend.git</connection>
         <developerConnection>scm:git:git@github.com:gooddata/gdc-backend.git</developerConnection>
         <url>https://github.com/gooddata/gdc-backend</url>
-    </scm>
+      <tag>release-test-1.0</tag>
+  </scm>
 
     <developers>
        <developer>
