--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>net.sitina.test</groupId>
   <artifactId>release-test</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <name>release-test</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:git@github.com:sitina/release-test.git</connection>
         <developerConnection>scm:git:git@github.com:sitina/release-test.git</developerConnection>
         <url>https://github.com/sitina/release-test</url>
-      <tag>release-test-1.0</tag>
+      <tag>release-test-1.0.1</tag>
   </scm>
 
     <developers>
